2017-05-30  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 41177: Completion/Unix/Command/_nm: add support for macOS
	and OpenBSD

2017-05-26  Peter Stephenson  <p.stephenson@samsung.com>

	* 41164: Src/hashtable.c, Src/hist.c, Src/zsh.h: Don't free a
	history entry if it's the current line.  This replaces 41113.

2017-05-28  Barton E. Schaefer  <schaefer@zsh.org>

	* Sebastian: 41153: Src/Modules/db_gdbm.c: finish module setup
	only after all error conditions have been checked

	* Sebastian: 41151: Src/Modules/db_gdbm.c: propagate flags when
	creating new parameter

	* unposted: Doc/Zsh/mod_complist.yo: clarify ZLS_COLORS pattern
	matching contexts

	* 41159 (tweaked): Completion/Unix/Command/_ssh: handle "Include"
	and "HostName" lines in ~/.ssh/config

2017-05-24  Peter Stephenson  <p.stephenson@samsung.com>

	* Sebastian: 41146: Src/Modules/db_gdbm.c: be more careful about
	freeing strings with embedded nulls.

	* Sebastian: 40898: Src/Modules/db_gdbm.c: fix GDBM error handling.

2017-05-23  Peter Stephenson  <p.stephenson@samsung.com>

	* Stephane: 41142: Src/Modules/system.c: ensure close-on-exec is
	applied to moved file descriptor.

2017-05-22  Peter Stephenson  <p.stephenson@samsung.com>

	* Marko Myllenen: 41087: Completion/Unix/Command/_kvno: Update
	completion to MIT krb 1.14.

	* Marko Myllenen: 41086: Completion/Unix/Command/_libvirt:
	update completion.

	* Marko Myllenen: 41085: Completion/Unix/Command/_openstack:
	update completion.

	*  Jörg Sommer: 41128: Doc/Zsh/compsys.yo: typo.

2017-05-19  Peter Stephenson  <p.stephenson@samsung.com>

	* users/22707: Doc/Zsh/compsys.yo: Document use of
	accept-exact-dirs for allowing completion after "magic"
	directories.

2017-05-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 41113 (tweaked): Src/hashtable,c, Src/hist.c, Src/zsh.h: Save
	and restore state of linking of current history line into history
	ring, to avoid an attempt to free the current history line.
