@@ -1,3 +1,9 @@
+2017-06-01  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 41191: Src/Zle/textobjects.c, Src/Zle/zle.h,
+	Src/Zle/zle_keymap.c: Check for .thingy when we check for a
+	particular thingy.
+
 2017-05-30  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
 
 	* 41177: Completion/Unix/Command/_nm: add support for macOS
